# k250pico

./: .gitignore  CMakeLists.txt  README.md
blinky/: CMakeLists.txt  blinky.c
k250interface/: CMakeLists.txt  main.c  ssarx.pio  ssatx.pio
serialtest/: CMakeLists.txt  main_ser.c
testinput/: CMakeLists.txt  testinput.c  testinput.pio
testoutput/: CMakeLists.txt  testout.c  testout.pio
